# src/main/java/edu/hei/school/restaurant/dto/BestSaleDTO.java
@@ -1,0 +1,12 @@
+package edu.hei.school.restaurant.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+@AllArgsConstructor
+@Data
+public class BestSaleDTO {
+    private String dishName;
+    private Double totalQuantity;
+    private Double totalRevenue;
+}
