# src/main/java/edu/hei/school/restaurant/dto/DishOrderProjection.java
@@ -1,0 +1,8 @@
+package edu.hei.school.restaurant.dto;
+
+public record DishOrderProjection(
+        Long dishId,
+        String dishName,
+        double quantity,
+        double unitPrice
+) {}
